# Automated-In-Situ-Analysis-For-Hydrodynamic-Simulation

./: README.md
examples/Castro-wdmerger/Source/driver/: main.cpp
examples/impactX_project/: run_in_situ_data_collection.py  run_surrogate_model.py
examples/jacobi/: Makefile  jacobi.c
examples/lulesh/: Makefile  lulesh.cc
examples/stencil/: Makefile  main.c  stencil.c  stencil.h
src/: CMakeLists.txt  rtune_runtime.c  rtune_runtime.h
